--- a/JSFSpring-Portal/pom.xml
+++ b/JSFSpring-Portal/pom.xml
@@ -18,6 +18,7 @@
   	<primefaces.version>6.0</primefaces.version>
   	<java.cdi>1.2</java.cdi>
   	<spring.webflow>2.3.1.RELEASE</spring.webflow>
+  	<javax.inject.version>1</javax.inject.version>
   </properties>
   <dependencies>
  		<!-- JSF -->
@@ -89,6 +90,12 @@
 			<groupId>com.jardelnovaes.jsf.samples</groupId>
 			<artifactId>JSFSpring-Service</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<!-- JSR-330 standard injection -->
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>${javax.inject.version}</version>
 		</dependency>
     </dependencies>
   <build>
